<?xml version="1.0"?>
<package format="2">
  <name>python_astar_dummy_planner</name>
  <version>0.0.1</version>
  <description>Python A* planner + Dummy C++ global planner bridge</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_core</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export>
    <nav_core plugin="${prefix}/dummy_global_planner_plugin.xml"/>
  </export>
</package>
